chat is realtime but needs to be limited by room. replaced with chat.jsx as active component

--- a/frontend/src/styles/chatbox.scss
+++ b/frontend/src/styles/chatbox.scss
@@ -7,7 +7,7 @@
 .chatbox_sender {
   display: flex;
   justify-content: flex-end;
-  flex-direction: row;
+  flex-direction: row-reverse;
 }
 
 .avatar {
