--- a/frontend/src/styles/aiAssistant.css
+++ b/frontend/src/styles/aiAssistant.css
@@ -1,11 +1,10 @@
-.aiAssistant {
+/* .aiAssistant {
   display: flex;
   flex-direction: column;
-
-  
 }
+
 .promptQuestions {
   display: flex;
   flex-direction: column;
   max-width: 20%;
-}
+} */
