--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -6,9 +6,9 @@ body {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 .App {
   height: 100vh;
